--- a/Spark_Standalone_Architecture_on_Google_Colab.ipynb
+++ b/Spark_Standalone_Architecture_on_Google_Colab.ipynb
@@ -1480,7 +1480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 32,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2024-05-02T09:55:52.358074Z",
@@ -1492,20 +1492,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "72725b59-b82a-4dfe-ec4b-da7aa075315a"
+        "outputId": "b133f09e-a45a-4aa5-d172-a05b31cb4339"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "localhost: ssh: connect to host localhost port 22: Cannot assign requested address\r\n",
-            "stopping org.apache.spark.deploy.master.Master\n"
+            "no org.apache.spark.deploy.worker.Worker to stop\n",
+            "no org.apache.spark.deploy.master.Master to stop\n"
           ]
         }
       ],
       "source": [
-        "!$SPARK_HOME/sbin/stop-all.sh"
+        "!$SPARK_HOME/sbin/stop-worker.sh\n",
+        "!$SPARK_HOME/sbin/stop-master.sh"
       ]
     }
   ],
