--- a/Hadoop_single_node_cluster_setup_Python.ipynb
+++ b/Hadoop_single_node_cluster_setup_Python.ipynb
@@ -3643,7 +3643,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# View your application's logs\n",
+        "## View your application's logs\n",
         "\n",
         "There are multiple ways to view an application's log files.\n",
         "\n",
