--- a/Hadoop_minicluster.ipynb
+++ b/Hadoop_minicluster.ipynb
@@ -890,7 +890,7 @@
         "Options used in `lsof`:\n",
         "\n",
         "* `-i` specifies that you want to display only network files, that is open network connections\n",
-        "* `-n` and `-P` tell `lsof` to show ports and IP addresses in numeric form\n",
+        "* `-n` and `-P` tell `lsof` to show IP addresses (`-n`) and ports (`-P`) in numeric form. This makes `lsof` faster as it saves the time for name lookups.\n",
         "* the option `+c0` is used to show a longer substring of the name of the UNIX command associated with the process (https://linux.die.net/man/8/lsof)\n",
         "* `-sTCP:LISTEN` filters for TCP connections in state `LISTEN`\n",
         "\n",
