--- a/Hadoop_minicluster.ipynb
+++ b/Hadoop_minicluster.ipynb
@@ -1297,7 +1297,7 @@
       "cell_type": "code",
       "source": [
         "# you should set this to True\n",
-        "NGROK = True #@param {type:\"boolean\"}"
+        "NGROK = False #@param {type:\"boolean\"}"
       ],
       "metadata": {
         "id": "jD7pB1dHGaMB"
