--- a/Run_Spark_on_Google_Colab.ipynb
+++ b/Run_Spark_on_Google_Colab.ipynb
@@ -10,7 +10,7 @@
         "LHc1-i1dypOz",
         "TLCmpDVLMtDq"
       ],
-      "authorship_tag": "ABX9TyPPH2ejyMx8FcvEMCfDZe77",
+      "authorship_tag": "ABX9TyNKVRldX87euHoTZe593M0V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,11 +223,10 @@
         "id": "j0ya6VMzXbKe",
         "outputId": "029b80d9-dc9c-44b4-f802-da459bcc052d",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,7 +361,7 @@
         "id": "yut-LNV-MuZX",
         "outputId": "4bd3a850-0ebb-4fef-c96d-e08eba4e8f44"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +399,7 @@
         "id": "aKHJYsGPMqFb",
         "outputId": "22f2a023-4d91-4494-9350-846f16441e0d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,7 +444,7 @@
         "id": "oSKF08RRm43X",
         "outputId": "3c4e1cc8-1dcb-487b-b735-6ef0b6914eb5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,7 +508,7 @@
         "id": "rbzRLwxwzBfu",
         "outputId": "33f2e2e1-35b7-4b6a-cb19-d89c71a3add8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,7 +540,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Check the NGROK box below if you want to use ngrok."
+        "Check the NGROK box below if you want to use ngrok (by default this is set to `False`)."
       ],
       "metadata": {
         "id": "2JD-qpP5Zybf"
@@ -551,12 +550,12 @@
       "cell_type": "code",
       "source": [
         "# you should set this to True\n",
-        "NGROK = True #@param {type:\"boolean\"}"
+        "NGROK = False #@param {type:\"boolean\"}"
       ],
       "metadata": {
         "id": "BZd46bH6ZyRo"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,7 +586,7 @@
         "id": "KcpLdqcnaS7q",
         "outputId": "cc6248d3-8224-4842-d838-e7c1e43e0564"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -642,7 +641,7 @@
         "id": "1AXh71YPbF3F",
         "outputId": "c1d0a852-a03d-42cf-c3f3-ea4db03c8106"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,7 +705,7 @@
         "id": "vmx3UOgwqM91",
         "outputId": "924d8556-073d-48e6-907f-c4e225d68770"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,7 +740,7 @@
         "id": "ev-pGUHIbbAo",
         "outputId": "55eb3581-9ae0-41a3-8c9a-edaa10c7d383"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,7 +781,7 @@
         "id": "CcnrxS8drsaW",
         "outputId": "84229234-678a-489b-9575-cead34e64308"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -833,7 +832,7 @@
         "id": "MHoYLbCfwppf",
         "outputId": "00bc6aa6-9167-4bd8-a9c6-de0b8a0a57fe"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,7 +883,7 @@
         "id": "KlqvptLesVNY",
         "outputId": "23646a53-2e09-4c09-aede-0d1a87fabdef"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -958,7 +957,7 @@
         "id": "mFYEnnrOw179",
         "outputId": "37c4bcd2-5875-4000-e898-f9d04daa89c7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1003,7 +1002,7 @@
         "id": "KE4B2RY5U4wG",
         "outputId": "8bb4eae7-42b9-4150-ac8e-ef5299089e0b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1028,12 +1027,13 @@
     {
       "cell_type": "code",
       "source": [
-        "ngrok.kill()"
+        "if NGROK:\n",
+        "  ngrok.kill()"
       ],
       "metadata": {
         "id": "DLGmZykeb3UW"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
