📝 capitalize NumPy and Matplotlib

--- a/polynomial_regression.ipynb
+++ b/polynomial_regression.ipynb
@@ -16,16 +16,15 @@
         "id": "zReeXVyPfjR-"
       },
       "source": [
-        "\n",
         "<a href=\"https://github.com/groda/big_data\"><div><img src=\"https://github.com/groda/big_data/blob/master/logo_bdb.png?raw=true\" align=right width=\"90\" alt=\"Logo Big Data for Beginners\"></div></a>\n",
-        "# Polynomial regression with numpy and matplotlib\n",
+        "# Polynomial regression with NumPy and Matplotlib\n",
         "\n",
-        "A worked out example of polynomial regression with `numpy` using `matplotlib` for visualization."
+        "This tutorial provides a comprehensive, step-by-step example of polynomial regression using NumPy, with Matplotlib for visualizing the results."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "metadata": {
         "id": "RvLYGsnGfjSA"
       },
@@ -46,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 2,
       "metadata": {
         "id": "EYS_y6wmfjSB"
       },
@@ -68,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 3,
       "metadata": {
         "id": "kVDeLm0AfjSB"
       },
@@ -84,7 +83,7 @@
         "id": "pG4yUYOmfjSB"
       },
       "source": [
-        "### Generate random data\n",
+        "### Generate some random data\n",
         "\n",
         "To generate some random data that is suitable for polynomial regression we're going to use the following functions:\n",
         "- [`np.random.uniform`](https://docs.scipy.org/doc/numpy-1.16.0/reference/generated/numpy.random.uniform.html) draws samples from a uniform distribution\n",
@@ -106,10 +105,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 4,
       "metadata": {
         "id": "ZujnBWOEfjSC",
-        "outputId": "8d21814b-94af-481e-c172-3f67ef0fe2de",
+        "outputId": "8ae083fb-90a9-412f-c44c-f2be4fe52d1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
@@ -140,10 +139,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 5,
       "metadata": {
         "id": "4H9jY9c2fjSD",
-        "outputId": "9b41e468-66e7-426a-d144-ad0694fe8602",
+        "outputId": "7deadd42-4bfb-49f0-a2a6-ad9645d57718",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
@@ -181,10 +180,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 6,
       "metadata": {
         "id": "2HejhTSIfjSD",
-        "outputId": "70d32c7a-10a4-4085-87e6-9e1a27730115",
+        "outputId": "c920c816-9583-4c4b-c410-0b54d094b067",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -216,10 +215,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 7,
       "metadata": {
         "id": "bOKjV-N6fjSD",
-        "outputId": "37cd3b91-5ad2-4527-9c9d-ec5fab20e9cc",
+        "outputId": "84050c32-edd0-4e8b-c83d-04b9abac6b3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
