--- a/Google_Colab_vs_GitHub_ubuntu_runner.ipynb
+++ b/Google_Colab_vs_GitHub_ubuntu_runner.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxCJNu8wDqA2Wx3CWjiMHN",
+      "authorship_tag": "ABX9TyOLri+abBs659/we+Tabuib",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,6 +191,24 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Data collection on Colab"
+      ],
+      "metadata": {
+        "id": "_-aGEWBU2axD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Get information on the processing units (CPUs) with [`lscpu`](https://unix.stackexchange.com/questions/468766/understanding-output-of-lscpu):"
+      ],
+      "metadata": {
+        "id": "WRXnDGVz49ZA"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -198,7 +216,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FoEpZvFFGdkX",
-        "outputId": "b7c2a730-453a-4264-d086-957077bdf36b"
+        "outputId": "16ad7774-014f-444d-954c-20df261fd230"
       },
       "outputs": [
         {
@@ -263,6 +281,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Show the amount of total/free/used memory in human-readable format (option `-h`):"
+      ],
+      "metadata": {
+        "id": "VROe0TPw4oxH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!free -h"
@@ -274,7 +301,7 @@
         "id": "4wVKKHbRGjhY",
         "outputId": "2bead5da-5653-49ef-c9e7-9c47393434a3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,9 +317,35 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Status: Oct. 20, 2024\n",
+        "## Data collection on GitHub\n",
         "\n",
-        "(as these things change all the time)"
+        "In order to collect information on the GitHub runner I created an [_action_](https://docs.github.com/en/actions/writing-workflows/quickstart) defined in the YAML file:\n",
+        "\n",
+        "```\n",
+        "name: Get info on runner\n",
+        "run-name: Runner info\n",
+        "on:\n",
+        "  # needs to be started manually (by clicking on it)\n",
+        "  workflow_dispatch:\n",
+        "jobs:\n",
+        "  Runner-Info-RAM-CPU:\n",
+        "    runs-on: ubuntu-latest\n",
+        "    steps:\n",
+        "      - run: lscpu\n",
+        "      - run: free -h\n",
+        "      - run: echo \"🍏 This job's status is ${{ job.status }}.\"\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "m4RrJKyM2kwl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Status:** Oct. 20, 2024\n",
+        "\n",
+        "(these things change over time)"
       ],
       "metadata": {
         "id": "7IYSXcflNDYU"
