📝 link to yml action

--- a/Google_Colab_vs_GitHub_ubuntu_runner.ipynb
+++ b/Google_Colab_vs_GitHub_ubuntu_runner.ipynb
@@ -319,7 +319,7 @@
       "source": [
         "## Data collection on GitHub\n",
         "\n",
-        "In order to collect information on the GitHub runner I created an [_action_](https://docs.github.com/en/actions/writing-workflows/quickstart) defined in the YAML file:\n",
+        "In order to collect information on the GitHub runner I created an [_action_](https://docs.github.com/en/actions/writing-workflows/quickstart) defined in the YAML file [get_info_on_runner.yml](https://github.com/groda/big_data/blob/master/.github/workflows/get_info_on_runner.yml):\n",
         "\n",
         "```\n",
         "name: Get info on runner\n",
