👷 Update downloadSpark.ipynb

--- a/downloadSpark.ipynb
+++ b/downloadSpark.ipynb
@@ -497,6 +497,9 @@
         "# data_table is only available on Google Colab\n",
         "if IN_COLAB:\n",
         "  from google.colab import data_table\n",
+        "else:\n",
+        "  !pip install plotly\n",
+        "  !pip install pandas\n",
         "import pandas as pd\n",
         "import re\n",
         "\n",
