--- a/Google_Colab_vs_GitHub_ubuntu_runner.ipynb
+++ b/Google_Colab_vs_GitHub_ubuntu_runner.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLri+abBs659/we+Tabuib",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +43,9 @@
         "\n",
         "I've noticed that the Big Data notebooks in the BDb repo run quite fast when [being tested by GitHub actions](https://github.com/groda/big_data/actions/workflows/run-notebooks.yml) compared to their runtimes on Google Colaboratory. You can find some timings in: [action_log.txt](https://github.com/groda/big_data/blob/367429dca1faeefc7c2d2dbfda023609a683c055/action_log.txt).\n",
         "\n",
-        "So I compared the standard Google Colab virtual machine with GitHub's \"ubuntu:latest\" runner and found out that not only the GitHub runner has $15$GB RAM ($3$GB more than Google Colab) but it also has double the amount of virtual CPU's ($4$ versus the $2$ of Google Colab).\n",
+        "So I compared the standard Google Colab virtual machine with GitHub's \"ubuntu:latest\" (**\\***) runner and found out that not only the GitHub runner has $15$GB RAM ($3$GB more than Google Colab) but it also has double the amount of virtual CPU's ($4$ versus the $2$ of Google Colab).\n",
+        "\n",
+        "(**\\***) As of December 2024, GitHub's \"ubuntu-latest\" image [is soon going to be replaced by \"ubuntu-24.04\"](https://github.com/actions/runner-images/issues/10636) (currently it's 22.04) so I'll need to substitute \"ubuntu-22.04\" to \"ubuntu-latest\" in GitHub since Colab is currently using \"ubuntu-22.04\".\n",
         "\n",
         "Below is a comparison table."
       ],
@@ -210,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -315,13 +316,47 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!cat /etc/os-release"
+      ],
+      "metadata": {
+        "id": "V8mK-QOgRhBP",
+        "outputId": "8281f64e-d7a8-4b64-f71c-93344f7d4bb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "PRETTY_NAME=\"Ubuntu 22.04.3 LTS\"\n",
+            "NAME=\"Ubuntu\"\n",
+            "VERSION_ID=\"22.04\"\n",
+            "VERSION=\"22.04.3 LTS (Jammy Jellyfish)\"\n",
+            "VERSION_CODENAME=jammy\n",
+            "ID=ubuntu\n",
+            "ID_LIKE=debian\n",
+            "HOME_URL=\"https://www.ubuntu.com/\"\n",
+            "SUPPORT_URL=\"https://help.ubuntu.com/\"\n",
+            "BUG_REPORT_URL=\"https://bugs.launchpad.net/ubuntu/\"\n",
+            "PRIVACY_POLICY_URL=\"https://www.ubuntu.com/legal/terms-and-policies/privacy-policy\"\n",
+            "UBUNTU_CODENAME=jammy\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Data collection on GitHub\n",
         "\n",
         "In order to collect information on the GitHub runner I created an [_action_](https://docs.github.com/en/actions/writing-workflows/quickstart) defined in the YAML file [get_info_on_runner.yml](https://github.com/groda/big_data/blob/master/.github/workflows/get_info_on_runner.yml):\n",
         "\n",
-        "```\n",
+        "```bash\n",
         "name: Get info on runner\n",
         "run-name: Runner info\n",
         "on:\n",
@@ -333,6 +368,7 @@
         "    steps:\n",
         "      - run: lscpu\n",
         "      - run: free -h\n",
+        "      - run: cat /etc/os-release\n",
         "      - run: echo \"🍏 This job's status is ${{ job.status }}.\"\n",
         "```"
       ],
@@ -343,7 +379,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Status:** Oct. 20, 2024\n",
+        "**Status:** Dec. 02, 2024\n",
         "\n",
         "(these things change over time)"
       ],
